# orpheus-song-forge

./: .env.example  .gitignore  Cargo.toml  Dockerfile  QUICK_START.md  README.md  build-setup.md  dfx.json  docker-compose.yml  index.html  package-lock.json  package.json  run-orpheus.ps1  run.bat  start-server.bat  tailwind.config.ts  test-api.ps1  vite.config.ts
src/: App.tsx  auth.rs  handlers.rs  index.css  main.rs  models.rs  storage.rs
src/components/: ArtistProfile.tsx  CollaborationRoom.tsx  HeroSection.tsx  Navigation.tsx
src/components/ui/: button.tsx
src/integrations/supabase/: client.ts
src/orpheus_backend/: lib.rs  orpheus_backend.did
src/pages/: Index.tsx
supabase/: config.toml
