[package]
name = "orpheus-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

# File handling for uploads
multer = "3.0"
mime = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

# HTTP client for ICP integration
reqwest = { version = "0.11", features = ["json"] }

# Base64 for ICP authentication
base64 = "0.21"

# Additional error handling
thiserror = "1.0"

# Environment variables
dotenv = "0.15"

# HTTP status codes
http = "1.0"
