[package]
name = "orpheus_backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "orpheus_backend"
crate-type = ["cdylib"]
path = "src/orpheus_backend/lib.rs"

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.8"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
